--- a/languages/rust/rust.org
+++ b/languages/rust/rust.org
@@ -167,7 +167,7 @@ https://github.com/rust-lang/rust/tree/HEAD/src/doc/style-guide/src
 | tuple struct |   SName(1,2)    |     .0      |  SName(a,b)  |        NO         |  struct SN(i8,i8)  |
 | named struct |  SName{a: 10}   |   .FIELD    | SName{a, ..} |        NO         | struct SN {x: i64} |
 |        array |      [1,2]      |     [0]     |   [a,_,_]    |        NO         |    [i32;LENGTH]    |
-|          Vec |    vec![1,2]    | [0] .get(0) |              |     .push(23)     |      Vec<i32>      |
+|    vec(tors) |    vec![1,2]    | [0] .get(0) |              |     .push(23)     |      Vec<i32>      |
 |      HashMap | HashMap::new()  |  .get(key)  |  (key,val)   | .insert(key, val) |                    |
 |--------------+-----------------+-------------+--------------+-------------------+--------------------|
 - structs
