--- a/languages/web/css.org
+++ b/languages/web/css.org
@@ -1,3 +1,4 @@
+- default css https://www.w3schools.com/cssref/css_default_values.php
 - https://css-tricks.com/examples/nth-child-tester/
 - https://www.matuzo.at/blog/2022/100-days-of-more-or-less-modern-css/
 - https://developer.mozilla.org/en-US/docs/Web/CSS
